# Minecraft

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
assets/: README.md
data/raw_data/: mix_nc_jspsych_1780586225576.json  mix_nc_jspsych_1780586325394.json
docs/: GLOSSARY.md  data_dictionary.md
docs/models/method/: generative_model_macro_framework_cn.html
docs/models/proposal/: analysis-10.tex  analysis-7-1.tex  analysis-7.tex  analysis-8.tex  analysis-9.tex
docs/models/开发文档/: generative_model_macro_requirements_cn.html  generative_model_macro_software_design_cn.html
docs/task_design/: adaptive_BDE_生成方案.md  task_design.md
experiments/NC_MIX_TASK_jspsych版本/: README.md
result/figure/mix_jspsych/: all_summaries.json
script/demo/: demo_generative_model_grid9.py  demo_map_estimation.py
script/real_data_pipeline/: infer_chunk_human.py  infer_landmark_human.py  preprocess_human_data.py  visualize_landmark_human_3d.py  visualize_map_human.py
script/simulation_recovery_pipeline/: generate_landmark_simulated_data.py  validate_landmark_recovery.py  visualize_landmark_elbow.py  visualize_landmark_recovery.py
script/visualization/: README.md  visualize_mix_jspsych_data.py
src/cognitivemap/: __init__.py  _env.py
src/cognitivemap/generative_model/: __init__.py  agent.py  cognitive_graph.py  planning.py  (+4 more)
tests/: conftest.py  test_cognitive_map_distances.py  test_inference_chunk.py  test_inference_landmark.py  test_visualization.py
tests/generative_model/: conftest.py  test_kernel_graph_planning.py  test_task_and_representations.py
(+42 files in other folders)
