[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Minecraft"
version = "0.1.0"
description = "Research code for Minecraft cognitive representation experiments"
readme = "README.md"
authors = ["Zhi-Hua Zhu <767746811@qq.com>"]

packages = [
    { include = "cognitivemap", from = "src" }
]


[tool.poetry.dependencies]
python = ">=3.10,<3.11"  # 对应原本的 requires-python
numpy = ">=1.21.0,<2.0.0"
scipy = ">=1.7.0,<2.0.0"
matplotlib = ">=3.4.0,<4.0.0"
networkx = "2.6.0"
pandas = ">=1.5.0,<3.0.0"
scikit-learn = ">=1.2.0,<2.0.0"
ipytest = ">=0.14.2,<0.15.0"
pgm-toolkit = ">=0.1.0"
graphviz = ">=0.21"
gymnasium = ">=0.29,<1.0"
joblib = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
pre-commit = ">=4.3.0"
jupyter = ">=1.0.0"

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "pandas.*",
    "pgm_toolkit.*",
    "scipy.*",
    "sklearn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --color=yes"
